# aegis-stack

./: .dockerignore  .env.example  .pre-commit-config.yaml  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  llms.txt  main.py  mkdocs.yml  objects.inv  philosophy.html  pyproject.toml  sitemap.xml  test_cli.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  security.yml
aegis/: __main__.py
aegis/core/: components.py  dependency_resolver.py  template_generator.py
aegis/templates/cookiecutter-aegis-project/: cookiecutter.json
aegis/templates/cookiecutter-aegis-project/hooks/: post_gen_project.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/: .env.example  Makefile  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2  test_redis.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/cli/: health.py  load_test.py  main.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/components/: {% if cookiecutter.include_scheduler == "yes" %}scheduler.py.j2{% endif %}
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/core/: config.py  discovery.py  lifecycle.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/entrypoints/: webserver.py  {% if cookiecutter.include_scheduler == "yes" %}scheduler.py{% endif %}
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/integrations/: main.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/app/services/: load_test.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/docs/: development.md  health.md
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/docs/components/: scheduler.md
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/scripts/: entrypoint.sh  gen_docs.py
aegis/templates/cookiecutter-aegis-project/{{cookiecutter.project_slug}}/tests/: test_core.py
app/backend/: main.py
app/backend/api/: routing.py
app/components/backend/: main.py
app/core/: config.py  discovery.py
app/frontend/: main.py
app/integrations/: main.py
app/services/: startup_demo.py
cli-reference/: index.html
components/: frontend.html  index.html  webserver.html
components/frontend/: index.html
components/scheduler/: index.html
components/webserver/: index.html
docs/: cli-reference.md  index.md  integration-patterns.md  philosophy.md  technology.md
docs/components/: frontend.md  index.md  scheduler.md  webserver.md
docs/guides/: lifecycle.md  project-creation.md  services.md
guides/: lifecycle.html  services.html
integration-patterns/: index.html
philosophy/: index.html
scripts/: entrypoint.sh  gen_docs.py
search/: search_index.json
technology/: index.html
tests/: CLI_TESTING.md  conftest.py  test_health.py
tests/cli/: conftest.py  test_cli_basic.py  test_cli_init.py
(+19 files in other folders)
